# gamut-mapping-ramblings

./: .gitignore  Dockerfile  LICENSE  README.rst  index.html  pyproject.toml  requirements.txt
notebooks/: gamut_mapping_compression_functions_01.ipynb  gamut_mapping_medicina_01.ipynb  gamut_mapping_ramblings_01.ipynb  gamut_mapping_ramblings_02.ipynb
resources/images/: 5DMarkII_Spac-o-ween_001.exr  A002_C029_06025K.exr  A009C002_190210_R0EI_Alexa_LogCWideGamut.exr  Carol Payne - J001_C001_08178N_001.exr  Cornell_Box_Rigid_Spheres_190_Patch_Roughplastic_Point_Grey_Grasshopper_50S5C_RGB_W.exr  Cornell_Box_Rigid_Spheres_190_Patch_Roughplastic_Point_Grey_Grasshopper_50S5C_RGB_W_A.exr
resources/luts/: ACES2065-1_sRGB_OT.csp
resources/py/: build_LUT.py
