[tool.poetry]
name = "gamut-mapping-ramblings"
version = "0.1.0"
description = "Gamut Mapping - Ramblings"
license = "BSD-3-Clause"
authors = [ "Colour Developers <colour-developers@colour-science.org>" ]
maintainers = [ "Colour Developers <colour-developers@colour-science.org>" ]
readme = 'README.rst'
repository = "https://github.com/colour-science/gamut-mapping-ramblings"
homepage = "https://www.colour-science.org/"
keywords = [
    "color",
    "color-science",
    "color-space",
    "color-spaces",
    "colorspace",
    "colorspaces",
    "colour",
    "colour-science",
    "colour-space",
    "colour-spaces",
    "colourspace",
    "colourspaces",
    "python",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering",
    "Topic :: Software Development"
]

[tool.poetry.dependencies]
python = "^3.5"
colour = { git = "https://github.com/colour-science/colour.git", branch = "develop" }

ipympl = { version = "*"}
ipywidgets = { version = "*"}
jupyter = { version = "*"}
jupyterlab = { version = "*"}
matplotlib = { version = "*"}
ipynb = { version = "*"}

[build-system]
requires = [ "poetry>=0.12" ]
build-backend = "poetry.masonry.api"
